--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script type="module" src="app.ts"></script>
   </head>
   <body>
-    <h1>Hello, fushigi!</h1>
+    <canvas id="game-canvas" width="640" height="480">
+
+    </canvas>
   </body>
 </html>
